no commit message

--- a/Languages/Metaprogramming/Parsing/Specific_language/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/TypeScript/tsestree.format.txt
@@ -41,7 +41,7 @@ function (VAR: TYPE): TYPE {}
                                              \=+===============================+=/
 
 
-TYPE                              #TS_TYPE. TypeScript TYPE value.
+TYPE                              #Type 'TSType'. TypeScript TYPE value.
                                   #Parent of lots of nodes.
 
 TYPE_VAR                          #Type 'TSEntityName'. Child of IDENTIFIER, for a TS_TYPE.
@@ -90,6 +90,9 @@ unique symbol                     #Child of TS_TYPE, type 'TSTypeOperator':
 readonly TYPE[]                   #  - typeAnnotation TS_TYPE
 readonly [TYPE,...]               #  - operator: 'keyof|unique|readonly'
 
+{ readonly ...[: TYPE],... }      #On CLASS_PROPERTY|TS_MAPPED_TYPE|TS_PROPERTY_SIGNATURE|TS_INDEX_SIGNATURE:
+                                  #  - [readonly BOOL]
+
 TYPE[TYPE2]                       #Child of TS_TYPE, type 'TSIndexedAccessType':
                                   #  - objectType TS_TYPE (TYPE)
                                   #  - indexType TS_TYPE (TYPE2)
@@ -110,14 +113,17 @@ TYPE[TYPE2]                       #Child of TS_TYPE, type 'TSIndexedAccessType':
 any                               #Child of TS_TYPE, type 'TSAnyKeyword'
 unknown                           #Child of TS_TYPE, type 'TSUnknownKeyword'
 never                             #Child of TS_TYPE, type 'TSNeverKeyword'
+
 undefined                         #Child of TS_TYPE, type 'TSUndefinedKeyword'
 null                              #Child of TS_TYPE, type 'TSNullKeyword'
 void                              #Child of TS_TYPE, type 'TSVoidKeyword'
+
 boolean                           #Child of TS_TYPE, type 'TSBooleanKeyword'
 number                            #Child of TS_TYPE, type 'TSNumberKeyword'
 string                            #Child of TS_TYPE, type 'TSStringKeyword'
 bigint                            #Child of TS_TYPE, type 'TSBigIntKeyword'
 symbol                            #Child of TS_TYPE, type 'TSSymbolKeyword'
+
 object                            #Child of TS_TYPE, type 'TSObjectKeyword'
 
 BOOL|NUM|STR|BIGINT               #Child of TS_TYPE, type 'TSLiteralType':
@@ -137,6 +143,7 @@ BOOL|NUM|STR|BIGINT               #Child of TS_TYPE, type 'TSLiteralType':
 
 [TYPE?,...]                       #Child of TS_TYPE, type 'TSOptionalType':
                                   #  - typeAnnotation TS_TYPE
+                                  #Only for TYPE?, not whole tuple
 
 
                                              /=+===============================+=\
@@ -179,9 +186,6 @@ OBJ_TYPE.VAR                      #Child of TS_ENTITY_NAME, type 'TSQualifiedNam
                                   #  - left TS_ENTITY_NAME
                                   #  - right IDENTIFIER
 
-{ readonly ...[: TYPE],... }      #On CLASS_PROPERTY|TS_MAPPED_TYPE|TS_PROPERTY_SIGNATURE|TS_INDEX_SIGNATURE:
-                                  #  - [readonly BOOL]
-
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -190,8 +194,8 @@ OBJ_TYPE.VAR                      #Child of TS_ENTITY_NAME, type 'TSQualifiedNam
                                              \=+===============================+=/
 
 
-class CLASS {}                    #
-  constructor                     #Child of PATTERN. Type 'TSParameterProperty'
+class CLASS {}
+  constructor                     #Child of PATTERN, type 'TSParameterProperty'
    (QUAL VAR[?]: TYPE,...)        #  - parameter PATTERN
                                   #  - [accessibility 'public|protected|private']
                                   #  - [readonly BOOL]
@@ -255,6 +259,7 @@ TYPE[]                            #Child of TS_TYPE, type 'TSArrayType':
 ...ARR_TYPE                       #Child of TS_TYPE, type 'TSRestType':
                                   #  - typeAnnotation TS_TYPE
                                   #for [...ARR_TYPE]
+
 [TYPE[?],...]                     #Child of TS_TYPE, type 'TSTupleType':
                                   #  - elementTypes TS_TYPE_ARR
 
@@ -282,17 +287,19 @@ TYPE & TYPE2                      #Child of TS_TYPE, type 'TSIntersectionType':
 type TYPE<T...> = ...
 class CLASS<T...> {}
 interface INTERFACE<T,...> {}
-[new] <T...>(...) => ...          #Type 'TSTypeParameterDeclaration':
-{ FUNC<T...>(...): ... }          #  - params TS_TYPE_PARAMETER_ARR
-{ [new] <T...>(...): ... }        #On FUNCTION_DECLARATION|FUNCTION_EXPRESSION|ARROW_FUNCTION_EXPRESSION|CLASS_DECLARATION|CLASS_EXPRESSION|CLASS_METHOD|OBJECT_METHOD
-function <T,...>(...) {...}       #TS_TYPE_ALIAS_DECLARATION|TS_INTERFACE_DECLARATION|
-<T,...>(...) => ...               #TS_FUNCTION_TYPE|TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DECLARE_METHOD|TS_METHOD_SIGNATURE|
-{ FUNC<T,...>(...) {} }           #TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
-declare function <T,...>(...)     #  - [typeParameters TS_TYPE_PARAMETER_DECLARATION_ARR] (<...>)
+[new] <T...>(...) => ...
+{ FUNC<T...>(...): ... }          #On FUNCTION_DECLARATION|FUNCTION_EXPRESSION|ARROW_FUNCTION_EXPRESSION|CLASS_DECLARATION|CLASS_EXPRESSION|CLASS_METHOD|OBJECT_METHOD
+{ [new] <T...>(...): ... }        #TS_TYPE_ALIAS_DECLARATION|TS_INTERFACE_DECLARATION|TS_FUNCTION_TYPE|
+function <T,...>(...) {...}       #TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DECLARE_METHOD|TS_METHOD_SIGNATURE|
+<T,...>(...) => ...               #TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
+{ FUNC<T,...>(...) {} }           #  - [typeParameters TS_TYPE_PARAMETER_DECLARATION_ARR] (<...>)
+declare function <T,...>(...)     #     - params TS_TYPE_PARAMETER_ARR
+
  T [extends TYPE3][ = TYPE4]      #Type 'TSTypeParameter':
  T in TYPE3                       #  - [name IDENTIFIER]
                                   #  - [constraint TYPE3]
                                   #  - [default TYPE4]
+
 TYPE<TYPE2_VAR,...>               #Type 'TSTypeParameterInstantiation':
                                   #  - params TS_TYPE_ARR
                                   #On CALL_EXPRESSION|NEW_EXPRESSION|TS_TYPE_REFERENCE|TS_EXPRESSION_WITH_TYPE_ARGUMENT:
@@ -363,7 +370,7 @@ namespace NAMESPACE {}            #Child of DECLARATION, type 'TSModuleDeclarati
 declare module "MODULE" {}        #  - id IDENTIFIER|LITERAL
 declare module "MODULE"           #  - body TS_MODULE_BLOCK (NAMESPACE) or TS_MODULE_DECLARATION (module|global):
 declare global {}                 #  - [global BOOL]
-                                  #TS_MODULE_BLOCK:
+                                  #Type 'TSModuleBlock':
                                   #  - body STATEMENT_ARR
 
 declare QUAL VAR ...
@@ -377,12 +384,13 @@ declare module ...                #TS_TYPE_ALIAS_DECLARATION|TS_ENUM_DECLARATION
 declare global ...                #  - [declare BOOL]
 
 declare [async] function FUNC()   #Child of DECLARATION, type 'TSDeclareFunction'. Like FUNCTION_DECLARATION except no body
+
 class ... { FUNC() }              #Type 'TSDeclareMethod'. Like METHOD_DEFINITION except no body
 
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:            MODULES            :==(
+                                            )==:         COMMONJS/UMD          :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
@@ -393,6 +401,7 @@ export = VAL                      #Child of STATEMENT, type 'TSExportAssignment'
 [export] import VAR = require(STR)#  - id IDENTIFIER
                                   #  - moduleReference TS_ENTITY_NAME (NAMESPACE) or TS_EXTERNAL_MODULE_REFERENCE (require(STR))
                                   #  - [isExport BOOL]
+
 require(STR)                      #Type 'TSExternalModuleReference':
                                   #  - expression EXPR
                                   #Only in import VAR = require(STR)
