no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -727,18 +727,29 @@ process.stdin|stdout|stderr                     #Standard streams
                                              \=+===============================+=/
 
 
-STREAM.isTTY                                    #true|undefined. True if piped to|from terminal.
-                                                #For process.stdin|stdout|stderr, if true, they will be instances of READSTREAM|WRITESTREAM
-isatty(FD_INT)->BOOL                            #
+STREAM.isTTY
+isatty(FD_INT)->BOOL                            #true|undefined if is READSTREAM|WRITESTREAM
 
-READSTREAM                                      #Child of TCPSOCKET, but without destroy(), connect event nor *address*
+ReadStream                                      #ISTREAM of a text terminal. Often for process.stdin
+                                                #Child of TCPSOCKET, but without destroy(), connect event nor *address*
                                                 #Will keep process alive until destroyed.
-READSTREAM.isRaw                                #BOOL: raw or character device.
-READSTREAM.bytesRead                            #So far
+READSTREAM.isRaw                                #If false (def):
+                                                #  - echoes input to output
+                                                #  - buffer input until next newline (i.e. line-wise input instead of character-wise)
+                                                #  - buffered input can be removed with Backspace|delete
+                                                #  - can quit with CTRL-D, CTRL-C, CTRL-Z
+                                                #  - emit sounds (bell)
+                                                #  - normalize any non-ASCII to ASCII (by removing MSB)
+                                                #  - '\r\n' -> '\n'
+                                                #In either case:
+                                                #  - use replace mode (not insert mode)
+                                                #  - no Emacs keybindings (CTRL-A, etc.)
+                                                #  - can move cursors (arrows, PageUp|Down, Home|End)
 READSTREAM.setRawMode(BOOL)                     #
+READSTREAM.bytesRead                            #So far (including newlines)
 
-WRITESTREAM                                     #Same but for process.stdout|stderr
-WRITESTREAM.columns|rows                        #UINT
+WriteStream                                     #Same as READSTREAM but for OSTREAM of a text terminal. Often for process.stdout|stderr
+WRITESTREAM.columns|rows                        #UINT. Automatically updated.
 WRITESTREAM.on("resize", FUNC())                #
 
 WRITESTREAM.getColorDepth([process.env])->NUM 9*#Number of bits per channel: 1|4|8|24
@@ -844,20 +855,21 @@ start([OBJ])->REPLSERVER                        #Creates a REPLSERVER:
                                                 #     - but with defaults process.stdin|stdout
                                                 #  - eval(STR, OBJ, FILENAME, FUNC(ERROR, STR2)):
                                                 #     - input handler:
-                                                #        - STR is input
+                                                #        - STR is input (including final newline)
                                                 #        - STR2 is printed output
                                                 #        - OBJ is current context (global object)
-                                                #        - if ERROR is new Recoverable(ERROR), keep prompt ongoing (e.g. for multiline input)
+                                                #        - if ERROR is new Recoverable(''), keep prompt ongoing (e.g. for multiline input)
+                                                #           - current input is added to next input
                                                 #     - def is async. wrapper of eval():
-                                                #  - useColors BOOL (def: process.stdout.hasColors())
-                                                #  - useGlobal BOOL (def: false): use current context, and not local one
-                                                #  - ignoreUndefined BOOL (def: false): if true, doesn't print output when it is undefined
                                                 #  - writer FUNC(VAL):
                                                 #     - output printing, def. is util.inspect()
                                                 #     - def util.inspect() options are util.inspect.replDefaults
                                                 #        - def: same as util.inspect.defaultOptions except:
                                                 #           - showProxy true
                                                 #           - colors OPTS.useColors
+                                                #  - useColors BOOL (def: process.stdout.hasColors())
+                                                #  - useGlobal BOOL (def: false): use current context, and not local one
+                                                #  - ignoreUndefined BOOL (def: false): if true, doesn't print output when it is undefined
                                                 #  - replMode:
                                                 #     - can be:
                                                 #        - REPL_MODE_STRICT: "use strict"
