no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -382,6 +382,26 @@ CLI ==>                                         #require.main, process.mainModul
                                                 #MODULE.id: 'repl'
                                                 #exports is undefined (but not MODULE.exports)
 
+PACKAGE.exports                                 #OBJ of { "PATH": "PATH2", ... } translating import ... from '...'
+--experimental-exports                          #Only used:
+                                                #  - on ESM import (not CommonJS)
+                                                #  - with import ... from 'MODULE/...', not '.[.]/MODULE' nor 'file:///...'
+                                                #  - if PACKAGE.type 'module'
+                                                #PACKAGE.main won't be used unless one of the conditions above not met
+                                                #  - i.e. can be used for CommonJS imports only
+                                                #PATH:
+                                                #  - must start with '.', which is matched against 'MODULE' in imported path
+                                                #     - i.e. single '.' can be used like PACKAGE.main
+                                                #  - if end with '/', is a prefix
+                                                #     - otherwise must be exact match
+                                                #     - if several matches, longer prefixes prevail
+                                                #PATH2:
+                                                #  - must start with '.'
+                                                #  - must end with '/' if PATH ends with '/'
+                                                #If no matches, errors:
+                                                #  - i.e. empty OBJ can be used to forbid 'MODULE/...'
+                                                #     - can be false (same as empty OBJ)
+
 import|export ...                               #ES modules
                                                 #Must use node --experimental-modules
                                                 #  - --experimental-vm-modules for use in VM
@@ -393,7 +413,7 @@ import|export ...                               #ES modules
                                                 #Mixing:
                                                 #  - ESM can import CommonJS
                                                 #     - only default import or dynamic import() (no named|namespace import)
-                                                #     - but can use dynamic require() with createRequireFromPath()
+                                                #     - can use dynamic require() with createRequireFromPath()
                                                 #  - CommonJS cannot import ESM
                                                 #     - including if ESM is a package (node_modules)
                                                 #     - but can use dynamic import(), which allows importing ESM
@@ -1448,7 +1468,9 @@ CLIENTREQ.on("response", FUNC(REQ))             #Response of the server.
 CLIENTREQ.on("continue", FUNC())                #Fired when server responds with Expect: 100-continue [S]
 CLIENTREQ.on("checkExpectation",FUNC(REQ, RES)) #Fired when server responds with Expect [S], except Expect: 100-continue [S]
 CLIENTREQ.on("information", FUNC(OBJ))       10*#Fired when server responds with 1** (excluding 101)
-                                             10*#OBJ: statusCode STR
+                                             10*#OBJ:
+                                             10*#  - statusCode STR
+                                             12*#  - headers OBJ, rawHeaders ARR, httVersion STR, httpVersionMinor|Major NUM
 CLIENTREQ.on
 ("connect", FUNC(REQ, TCPSOCKET, BUFFER))       #Fired when server responds to a CONNECT request
 CLIENTREQ.on
@@ -2928,7 +2950,8 @@ PERFORMANCE                                     #  - different entryTypes:
 PERFENTRY.*                                     #     - keep 'mark' and 'measure'
 PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMING -> 'nodeTiming' PERFNODETIMING
                                                 #     - no 'navigation' PERFORMANCENAVIGATION
-                                                #     - also has 'gc' and 'function'
+                                                #     - also has 'gc', 'function',
+                                             12*#       'http' or 'http2' (HTTP request started|done)
                                                 #  - no PERFORMANCE.clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
                                                 #  - PERFOBSERVER.observe OPTS.buffered BOOL:
                                                 #     - if false (def), fire listener callbacks sync
@@ -3133,9 +3156,10 @@ types.isExternal(VAL)->BOOL                  10*#True if external C/C++ value
 
 --experimental-report                        11*#Must be used
 
-process.report.getReport([ERROR])->'JSON'    11*#Get debugging information.
+process.report.getReport([ERROR])->OBJ       11*#Get debugging information.
                                              11*#Def ERROR is new Error()
                                              11*#Returns OBJ:
+                                             12*#(Node 11 returns 'JSON' instead)
                                              11*#  - header:
                                              11*#     - trigger:
                                              11*#        - 'GetReport': manual call to getReport()
