no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1944,15 +1944,13 @@ export { VAR as default, ... }
 export default VAL                           *-|#Default VAR ("default export"). Is just a named export called "default".
 export {}                                    *-|#Do not export anything (i.e. not an empty object)
 export ... from "MDL"                        *-|#Same as import ... from "MDL", then multiple export
-export ...,...                               *-|#Can compose the ones with commas
 
 import { VAR[ as VAR2], ... } from "MDL"     *-|#Specific VAR
 import * as VAR2 from "MDL"                  *-|#All VARs, including "default"
 import { default as VAR2, ... } from "MDL"
-import VAR from "MDL"                        *-|#"default" VAR. Can be combined, e.g. import VAR, {...} from "MDL"
+import VAR[, ...] from "MDL"                 *-|#"default" VAR. Can be combined, e.g. import VAR, {...} from "MDL"
 import {} from "MDL"
 import "MDL"                                 *-|#Do not import the variable, just execute the file
-import ...,...                               *-|#Can compose the ones with commas
 
 import("MDL")->PROMISE(OBJ)                *-||~#As opposed to above, not static (dynamic), i.e. does not have to be top-level
 
