--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -471,34 +471,34 @@ import|export ...                 #MODULE_DECLARATION
                                   #  - local IDENTIFIER (VAR2)
                                   #Inside import|export
 
-export QUAL VAR = VAL             #Child of MODULE_DECLARATION, type 'ExportNamedDeclaration':
-export function VAR() {}          #  (if export QUAL VAR or export FUNC)
-export { VAR [as VAR2|default] }  #  - [declaration DECLARATION]
-export {}                         #  (empty ARR unless export {...})
-export ... from "MDL"             #  - specifiers EXPORT_SPECIFIER_ARR, child of MODULE_SPECIFIER, type 'ExportSpecifier':
-                                  #     - local IDENTIFIER (VAR)
-                                  #     - exported IDENTIFIER (VAR2|default)
-                                  #  (if export ... from "MDL")
+export {}                         #Child of MODULE_DECLARATION, type 'ExportNamedDeclaration'.
+export QUAL VAR = VAL[, ...]
+export function VAR() {}          #On EXPORT_NAMED_DECLARATION:
+export class CLASS {}             #  - [declaration DECLARATION]
+export { VAR [as VAR2|default] }  #On EXPORT_NAMED_DECLARATION:
+                                  #  - specifiers EXPORT_SPECIFIER_ARR
+                                  #Type 'ExportSpecified' (child of MODULE_SPECIFIER):
+                                  #  - local IDENTIFIER (VAR)
+                                  #  - exported IDENTIFIER (VAR2|default)
+export ... from "MDL"             #On EXPORT_NAMED_DECLARATION:
                                   #  - [source LITERAL] ("MDL")
 
 export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefaultDeclaration':
-                                  #  - declaration (VAL) one of:
-                                  #     - EXPR
-                                  #     - [ANONYMOUS_]FUNCTION|CLASS_DECLARATION
-                                  #        - "ANONYMOUS": same type, but id null
+                                  #  - declaration EXPR|[ANONYMOUS_]FUNCTION|[ANONYMOUS_]CLASS_DECLARATION
+                                  #     - "ANONYMOUS": same type, but id null
 export * from "MDL"               #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
 
 import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDeclaration':
+                                  #  - specifiers MODULE_SPECIFIER_ARR
                                   #  - source LITERAL ("MDL")
-                                  #  - specifiers MODULE_SPECIFIER_ARR among:
-import { VAR [as VAR2|default] }  #      IMPORT_SPECIFIER, type 'ImportSpecifier':
-                                  #        - imported IDENTIFIER (VAR)
-                                  #        - local IDENTIFIER (VAR2, same as VAR by def)
-import VAR                        #      IMPORT_DEFAULT_SPECIFIER, type 'ImportDefaultSpecifier':
-                                  #        - local IDENTIFIER (VAR)
-import * as VAR                   #      IMPORT_NAMESPACE_SPECIFIER, type 'ImportNamespaceSpecifier':
-                                  #        - local IDENTIFIER (VAR)
+import { VAR [as VAR2|default] }  #Child of MODULE_SPECIFIER, type 'ImportSpecifier':
+                                  #  - imported IDENTIFIER (VAR)
+                                  #  - local IDENTIFIER (VAR2, same as VAR by def)
+import VAR                        #Child of MODULE_SPECIFIER, type 'ImportDefaultSpecifier':
+                                  #  - local IDENTIFIER (VAR)
+import * as VAR                   #Child of MODULE_SPECIFIER, type 'ImportNamespaceSpecifier':
+                                  #  - local IDENTIFIER (VAR)
 import "MDL"                      #
 import {}                         #Those have empty ARR as specifiers
 
