no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -13,10 +13,12 @@ VERSION ==>                       #Last commit 26/01/2018
 
 TYPESCRIPT/FLOW ==>               #See TSESTree
 
-PULL REQUESTS ==>                -#Marked like this
-
-@BABEL/PARSER ==>                B#Marked like this
-ACORN ==>                       aA#Marked like this (lowercase to mean "not present")
+NOTATION ==>                     -#Pull requests
+                                 B#@babel/parser
+                                aA#acorn
+                                 E#Espree
+                                 T#Typescript-estree
+                                  #Lowercase means "not present"
 
 
                                              /=+===============================+=\
@@ -31,10 +33,12 @@ OPTIONAL VALUES ==>               #Are either defined or null
 any                               #NODE:
                                   #  - type STR
                                   #  - [loc] (position in source code):
-                                 a#     - [source STR]
-                                  #     - start|end:
+                                  #     - [source STR]
+                                AT#     - start|end:
                                   #        - line NUM (1-indexed)
                                   #        - column NUM (0-indexed)
+                                 A#  - start|end NUM (not line-wise)
+                                 AT#  - range [NUM, NUM2] (not line-wise)
                                   #It is root type, abstract:
                                   #  - all other types inherit from it
                                   #  - all redefine type STR, except if abstract types themselves
@@ -82,6 +86,8 @@ STATEMENT                         #
 EXPR_STATEMENT                    #Statement with single EXPR.
                                   #Child of STATEMENT, type 'ExpressionStatement':
                                   #  - expression EXPR
+(EXPR)                           A#Child of EXPRESSION_STATEMENT, type 'ParenthesizedExpression'
+
 #!/bin/bash                      B#Type 'InterpreterDirective'
                                  B#  - value STR
                                  B#On PROGRAM:
@@ -94,6 +100,7 @@ EXPR_STATEMENT                    #Statement with single EXPR.
                                  B#  - extra.raw[Value] STR
                                  B#On PROGRAM:
                                  B#  - directives DIRECTIVE_ARR
+
 ;                                 #Empty statement, with only semicolon
                                   #Child of STATEMENT, type 'EmptyStatement'
 {...}                             #Child of STATEMENT, type 'BlockStatement':
@@ -103,7 +110,7 @@ EXPR_STATEMENT                    #Statement with single EXPR.
 /* COMMENT */                     #  - [comments COMMENT_ARR]
                                  B#  - [leadingComment|trailingComments COMMENT_ARR]
                                   #On PROGRAM:
-                                  #  - comments COMMENT_ARR
+                                 T#  - comments COMMENT_ARR
                                   #COMMENT:
                                   #  - type 'Line|Block'
                                  B#  - type 'CommentLine|Block'
