--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -71,9 +71,7 @@ ACORN.parse('JS'[, OPTS])         #Parse JavaScript.
                                   #  - allowImportExportEverywhere BOOL (def: false): non-top-level import|export
                                   #  - allowReserved BOOL|'never' (def: false): allow VAR that is a reserved keywords (true|false) or a OBJ.VAR ('never')
                                   #  - allowHashBang BOOL (def: false)
-                                  #  - preserveParens BOOL:
-                                  #     - parse parenthesis instead of ignoring them
-                                  #     - child of EXPR, type 'ParenthesizedExpression': expression EXPR2
+                                  #  - preserveParens BOOL (def: false): parse 'ParenthesizedExpression' nodes
                                   #  - onToken(TOKEN):
                                   #     - called by tokenizer
                                   #     - can also be an ARR to push arguments to it
