--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1943,6 +1943,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.takeRight|drop() -> ARR.slice()
                                  ##  - _.padStart|End() -> STR.padStart|End()
                                  ##  - _.upperFirst() -> STR[0].toUpperCase()
+                                 ##  - _.random() -> Math.random()
                                  ##Not checked:
                                  ##  - _.chunk() -> ARR.reduce()
                                  ##  - _.sortBy|orderBy() -> ARR.sort()
