--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -646,7 +646,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.13.0)
+react/*                          ##Node module "eslint-plugin-react" (7.14.0)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -702,7 +702,9 @@ react/jsx-no-target-blank [OBJ]  ##<a target="_blank"> must be accompanied by re
                                  ##OBJ:
                                  ##  - enforceDynamicLinks 'always' (def) or 'never': whether to enforce it when URI is JSX
 
-react/jsx-key                    ##Must use "key" when needed
+react/jsx-key [OBJ]              ##Must use "key" when needed
+                                 ##OBJ:
+                                 ##  - checkFragmentShorhand BOOL (def: false): checks <>...</>
 react/no-array-index-key         ##Avoid using an ARR index as "key", e.g. ARR.map((VAL, index) => <RTYPE key={index}>)
 react/display-name [OBJ]         ##Must specify displayName
                                  ##If OBJ.ignoreTranspilerName BOOL false (def), ignore if Babel will fix displayName
@@ -801,6 +803,10 @@ react/jsx-curly-spacing [OBJ|STR]##Spaces inside {}
                                  ##    children and non-children
                                  ##  - spacing: objectLiterals 'always' or 'never': when EXPR is OBJ, i.e. {{}}
                                  ##STR is shorthand
+react/jsx-curly-newline [OBJ|STR]##Newlines around {}
+                                 ##STR: 'consistent' (def), 'require', 'forbid'
+                                 ##OBJ:
+                                 ##  - multiline|singleline 'consistent' (def), 'require', 'forbid'
 react/jsx-tag-spacing            ##Spaces around < and >
                                  ##OBJ:
                                  ##  - closingSlash STR:
