no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -6,12 +6,12 @@
 
 
 See:
-  - check @types/node
   - check differences from javascript
   - JSDoc then https://www.typescriptlang.org/docs/handbook/type-checking-javascript-files.html
   - check VSCode options
   - to_learn.txt
   - GitHub search
+  - newsletters
   - add to my projects
 
 VERSION ==>                       #3.5.2
@@ -1038,7 +1038,7 @@ export as namespace NAME          #Declare NAME of global variable used in UMD d
 
 declare module "MODULE" {...}     #Declare the TYPEs (inside {...}) exported by `import "MODULE"`
                                   #Should prefer directly using ESM `export` in ambient file instead.
-                                  #Meant to be used with <reference/> but can be imported with ESM `import` too.
+                                  #Must be imported with <reference/>
                                   #import|export:
                                   #  - can be used in current file, but only inside {...}
                                   #  - can only import from "MODULE" not "PATH"
@@ -1161,14 +1161,13 @@ tslib                             #Similar to core-js but fewer features:
                                              \=+===============================+=/
 
 
-DIFFERENCE FROM JAVASCRIPT ==>    #  - TYPE declarations
-                                  #  - TYPE assertions
-                                  #  - declare
+DIFFERENCE FROM JAVASCRIPT ==>    #  - types: declarations, assertions, declare
                                   #  - namespace
                                   #  - [const] enum -> inlined as VAL|OBJ
-                                  #  - different CLASS syntax|features: implements, public|protected|private, parameter properties, abstract
-                                  #  - module resolution (no '.EXT', *.ts[x]|d.ts, PACKAGE.types[Version])
-                                  #  - module loading (CommonJS default export, <reference/>, declare module|global, export as namespace)
+                                  #  - different CLASS syntax|features: public|protected|private, parameter properties
+                                  #  - modules:
+                                  #     - resolution: no '.EXT', *.ts[x]|d.ts, PACKAGE.types[Version]
+                                  #     - loading: import(STR).VAR, CommonJS default export, <reference/>, declare module|global, export as namespace
 
 --experimentalDecorators          #Allow @DECORATOR (ES stage 2 proposal)
 --emitDecoratorMetadata           #Allow Reflect.metadata (ES stage 0 proposal)
