no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -466,8 +466,10 @@ super                             #Type 'Super'
 
 
 import|export ...                 #MODULE_DECLARATION
-{VAR [as VAR2]}                   #Inside import|export. MODULE_SPECIFIER:
+
+{VAR [as VAR2]}                   #MODULE_SPECIFIER:
                                   #  - local IDENTIFIER (VAR2)
+                                  #Inside import|export
 
 export QUAL VAR = VAL             #Child of MODULE_DECLARATION, type 'ExportNamedDeclaration':
 export function VAR() {}          #  (if export QUAL VAR or export FUNC)
