no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -429,11 +429,11 @@ EXPLICIT (SPECIFIC) ==>                         #To STR:
                                         10*-|||~#  - BIGINT:
                                         10*-|||~#     - BIGINT.toString(RADIX)
                                                 #  - DATE:
-                                                #     - DATE.toString(): "Day Mon DD YYYY HH:MM:SS TZ"
-                                                #     - DATE.toISOString(): "YYYY-MM-DDTHH:MM:SS.SSSZ"
+                                                #     - DATE.toString(): "Day Mon DD YYYY HH:MM:SS TZ" (local timezone)
+                                                #     - DATE.toISOString(): "YYYY-MM-DDTHH:MM:SS.SSSZ" (UTC)
                                                 #     - DATE.toUTCString(): "Day, DD Mon YYYY HH:MM:SS TZ" (UTC)
-                                                #     - DATE.toDateString(): "Day Mon DD YYYY"
-                                                #     - DATE.toTimeString(): "HH:MM:SS TZ"
+                                                #     - DATE.toDateString(): "Day Mon DD YYYY" (local timezone)
+                                                #     - DATE.toTimeString(): "HH:MM:SS TZ" (local timezone)
 
 
                                              /=+===============================+=\
