no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -7,7 +7,7 @@
 
 See:
   - updates:
-     - https://github.com/Microsoft/TypeScript/wiki/What's-new-in-TypeScript
+     - https://github.com/Microsoft/TypeScript/wiki/What's-new-in-TypeScript#typescript-26
      - https://github.com/microsoft/TypeScript/wiki/Breaking-Changes
      - https://devblogs.microsoft.com/typescript/
   - source like https://github.com/microsoft/TypeScript/blob/master/src/lib/es5.d.ts
@@ -195,7 +195,7 @@ TYPE[TYPE2]                       #UTYPE of TYPE properties values (including me
                                   #  - but can do it through ... & OBJ_TYPE2
                                   #Often used to map a TYPE using { [P in keyof TYPE]: TYPE[P] }
                                   #Can use ? and readonly on key like other OBJ_TYPEs
-                                  #  - can be prefixed with -|+ to mean "remove|add"
+                                  #  - can each be prefixed with -|+ to mean "remove|add"
 --keyofStringsOnly                #Backward compatibility with TypeScript <=2.9 where KTYPE could not be NUM|SYM_TYPE:
                                   #  - keyof TYPE will ignore them
                                   #  - { [T in KUTYPE]: VAL } will fail on them
@@ -390,7 +390,9 @@ InstanceType<FUNC_TYPE>           #Same as ReturnType<> but for 'new FUNC'
 TYPE[]
 Array<TYPE>                       #ARR of same types
 [TYPE[?],...]                     #ARR of different types (TUPLE).
-                                  #Each TYPE is only for that index. If outside range, use a union of all possible TYPEs.
+                                  #Each TYPE is only for that index.
+                                  #No missing value unless '?'
+                                  #No additional values.
 [..., ...ARR_TYPE]                #Spreads an ARR_TYPE
                                   #Does not work with TUPLE
 
@@ -527,7 +529,9 @@ TYPE GUARDS ==>                   #When:
                                   #  - including return value TYPE if has `return` statement
 VAR is TYPE                       #When used as FUNC return value's TYPE2, means FUNC() can be used as a type guard.
                                   #FUNC must return BOOL determining whether argument VAR belongs to TYPE.
-TAGGED UNION ==>                  #When type guarding with OBJ.VAR === !== == != VAL or implicit|explicit Boolean(), it type guards OBJ as well.
+TAGGED UNION ==>                  #When type guarding with OBJ.VAR:
+                                  #  - with operators: === !== == != Boolean() (implicit|explicit) in
+                                  #  - then it type guards OBJ as well
                                   #For example:
                                   #  type A = { kind: 'A' }
                                   #  type B = { kind: 'B' }
