no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1746,8 +1746,8 @@ relative('PATH', 'PATH2')->'PATH3'              #Print relative PATH3 to go from
 isAbsolute('PATH')->BOOL                        #
 
 dirname('PATH')->'DIR'                          #
-basename('PATH'[, 'EXT'])->'FILE'               #
-extname('PATH')->'EXT'                          #Including '.'
+basename('PATH'[, '.EXT'])->'FILE'              #
+extname('PATH')->'.EXT'                         #
 
 parse('PATH')->PATH_OBJ                         #PATH_OBJ: root STR, dir STR, base STR, ext STR, name STR
 format(PATH_OBJ)->'PATH'                        #Inverse
